--- a/src/main/resources/templates/email-template.html
+++ b/src/main/resources/templates/email-template.html
@@ -16,7 +16,7 @@
 <body style="margin: 0; padding: 0;">
 
 <table align="left" border="0" cellpadding="0" cellspacing="0" width="600" style="border-collapse: collapse;">
-    <p>Merhaba, \n\n Bu bir Spring Mail örneğidir:</p>
+    <p>Merhaba,Bu bir Spring Mail örneğidir:</p>
     <p>To reset your password. Click here...
         <!--/*@thymesVar id="resetUrl" type=""*/-->
         <a th:href="${resetUrl}">reset your password</a>
